--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
           </section>
         </section>
 
-        <section id="historySection" class="view-section" aria-live="polite" hidden>
+        <section id="historySection" class="view-section" aria-live="polite">
           <div class="history-panel">
             <div class="history-panel__header">
               <div>
